# gw2-lazy-rust

./: Cargo.toml
src/: main.rs  utils.rs
