[package]
name = "gw2-lazy-rust"
version = "0.1.0"
authors = ["Leonardo Brandao <leolrtbrandao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.125"
serde_json = "1.0"
serde_derive = "1.0.125"
futures = "0.3.1"
rand = "0.7"
async-std = { version = "1.2", features = ["attributes"] }
surf = "1.0"